--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<h1>hello world</h1>
-<p>푸시되나</p>
-<p>네 푸시됐어요!</p>
-<p>제꺼는 왜 안되는거죠!!!</p>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>우리의..레포</title>
+  </head>
+  <body>
+    <h1>hello world</h1>
+    <p>푸시되나</p>
+    <p>네 푸시됐어요!</p>
+    <p>제꺼는 왜 안되는거죠!!!</p>
+    <p>기므설하의 흔적</p>
+  </body>
+</html>
